--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "vite",
-    "dev:backend": "node --watch --trace-deprecation server/index.js",
+    "dev:backend": "node --env-file server/.env  --watch --trace-deprecation server/index.js",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.21"
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.2",
+    "vuetify": "^3.6.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
