--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "npm run start:frontend && npm run start:backend",
+    "start:frontend": "vite",
+    "start:backend": "node --env-file server/.env server/index.js",
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "vite",
     "dev:backend": "node --env-file server/.env  --watch --trace-deprecation server/index.js",
